--- a/web/package.json
+++ b/web/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.1.2",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "eslint": "8.25.0",
