--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.1.2",
+    "dompurify": "^2.4.0",
+    "html-react-parser": "^3.0.4",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
