--- a/web/package.json
+++ b/web/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@elastic/datemath": "^5.0.3",
+    "@elastic/eui": "^69.0.0",
+    "@emotion/cache": "^11.10.3",
+    "@emotion/react": "^11.10.4",
     "axios": "^1.1.2",
     "dompurify": "^2.4.0",
     "html-react-parser": "^3.0.4",
+    "moment": "^2.29.4",
     "next": "12.3.1",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rss-parser": "^3.12.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
