--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.1.2",
     "dompurify": "^2.4.0",
     "html-react-parser": "^3.0.4",
+    "luxon": "^3.0.4",
     "moment": "^2.29.4",
     "next": "12.3.1",
     "prop-types": "^15.8.1",
