--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,8 @@
     "@elastic/eui": "^69.0.0",
     "@emotion/cache": "^11.10.3",
     "@emotion/react": "^11.10.4",
-    "axios": "^1.1.2",
+    "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^1.1.3",
     "dompurify": "^2.4.0",
     "html-react-parser": "^3.0.4",
     "luxon": "^3.0.4",
@@ -22,6 +23,10 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "rss-parser": "^3.12.0",
     "xml2js": "^0.4.23"
   },
