--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "luxon": "^3.0.4",
     "moment": "^2.29.4",
     "next": "12.3.1",
+    "next-themes": "^0.2.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
