--- a/web/.prettierrc
+++ b/web/.prettierrc
@@ -1,7 +1,7 @@
 {
   "bracketSpacing": true,
   "jsxBracketSameLine": true,
-  "singleQuote": true,
+  "singleQuote": false,
   "trailingComma": "all",
   "arrowParens": "avoid",
   "jsxSingleQuote": true
