migrated to settings menu

--- a/web/.prettierrc
+++ b/web/.prettierrc
@@ -4,5 +4,5 @@
   "singleQuote": false,
   "trailingComma": "all",
   "arrowParens": "avoid",
-  "jsxSingleQuote": true
+  "jsxSingleQuote": false
 }
