--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "html-react-parser": "^3.0.4",
     "luxon": "^3.0.4",
     "moment": "^2.29.4",
+    "mongoose": "^6.7.3",
     "next": "12.3.1",
     "next-themes": "^0.2.1",
     "prop-types": "^15.8.1",
