--- a/.github/workflows/multiple-daily-cron.yaml
+++ b/.github/workflows/multiple-daily-cron.yaml
@@ -1,12 +1,12 @@
 name: multiple-daily-cron
 on:
   schedule:
-    - cron: "1 0,6,12,18 * * *"
+    - cron: "1 0 * * *"
 jobs:
   cron:
     runs-on: ubuntu-latest
     steps:
-      - name: Refresh Top Feeds every 6hrs
+      - name: Refresh Top Feeds everyday
         run: |
           curl --request GET \
           --url 'https://rss-swift.vercel.app/api/top_feeds/triggered'
